se agrego librocontroller, se quito el @table de libro y de autor y se modifico el libroimpl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create-drop # es para borrar la db en cada run
+#spring.jpa.hibernate.ddl-auto=update # actualiza la db al levantarla
+#spring.jpa.hibernate.ddl-auto=none # no hace nada
